# tp1orgacompus

./: .gitignore  CMakeLists.txt  CharsCelulas.h  Coordenada.h  Cursor.c  Cursor.h  Estado.h  Juego.c  Juego.h  JuegoDeLaVida.c  JuegoDeLaVida.h  Makefile  VersionC.c  coordenada_toroidal.S  juego.avi  main.c  obtenerIndiceMatriz.S  sapo  vecinos.S  video.avi
